ghc-4335c07/testsuite/tests/typecheck/should_fail/T12921.hs
{-# LANGUAGE OverloadedStrings #-}
module T12921 (stat) where

{-# ANN module "HLint: ignore Reduce duplication" #-}

stat :: Int -> Int
stat = choice []

-- 'choice' is deliberately out of scope in this test
